fix(CSS): prevent overflow scroll when dragging video Media Overlays frame [skip ci]

--- a/src/renderer/assets/styles/reader-app.css
+++ b/src/renderer/assets/styles/reader-app.css
@@ -88,6 +88,7 @@ body {
   padding: 0;
   width: 100%;
   font: 1.1rem "Open Sans", sans-serif;
+  overflow: hidden;
 }
 
 button {
